[android] - get results with gustily

--- a/platform/android/bitrise.yml
+++ b/platform/android/bitrise.yml
@@ -48,7 +48,19 @@ workflows:
             sudo apt-get update && sudo apt-get install google-cloud-sdk
             gcloud auth activate-service-account --key-file secret.json --project android-gl-native
             gcloud beta test android devices list
-            gcloud beta test android run --type instrumentation --app MapboxGLAndroidSDKTestApp-debug.apk --test MapboxGLAndroidSDKTestApp-debug-androidTest-unaligned.apk --device-ids shamu --os-version-ids 22 --locales en --orientations portrait --timeout 10m
+
+            ls
+
+            echo "Before testing--"
+
+            testUri="gs://test-lab-wrrntqk05p31w-h3y1qk44vuunw/"
+            testUri+=$(gcloud beta test android run --type instrumentation --app MapboxGLAndroidSDKTestApp-debug.apk --test MapboxGLAndroidSDKTestApp-debug-androidTest-unaligned.apk --device-ids shamu --os-version-ids 22 --locales en --orientations portrait --timeout 10m | egrep -o 'https?://console.developers.google.com/storage/[^ ].*' | cut -f7  -d /)
+
+            echo "After testing--"
+
+            gsutil -m cp -r -U $testUri
+
+            ls
     - slack:
         title: Post to Slack
         run_if: '{{enveq "SKIPCI" "false"}}'
